--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       </div>
     </div>
   </div>
-  <div class="page-home px-0 px-sm-1 px-lg-5">
-    <div class="container-fluid">
+  <div class="page-home">
+    <div class="container">
       <nav class="menubar navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand py-3" href="#">
           <img class="img-fluid" height="80px" src="./assets/images/logo.png" alt="">
@@ -250,9 +250,9 @@
     </div>
   </div>
 
-  <div class="px-5 pb-5">
+  <div class=" pb-5">
     <Footer>
-      <div class="container-fluid bg-primary py-5">
+      <div class="container bg-primary py-5">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 text-center">
             <img src="./assets/images/logo-footer.png" alt="">
@@ -296,8 +296,12 @@
           </div>
         </div>
       </div>
-      <div class="py-2 text-center bottom">
-        <h6 class="mb-0 text-light">© Copyright 2013 Reserved www. apa-industries.com All Rights Reserved</h6>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 py-2 text-center bottom">
+            <h6 class="mb-0 text-light">© Copyright 2013 Reserved www. apa-industries.com All Rights Reserved</h6>
+          </div>
+        </div>
       </div>
     </Footer>
   </div>
