--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
       <nav class="menubar navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand py-3" href="#">
-          <img class="img-fluid" height="80px" src="./assets/images/logo.png" alt="">
+          <img class="logo" src="./assets/images/logo.png" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -255,7 +255,7 @@
       <div class="container bg-primary py-5">
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 text-center">
-            <img src="./assets/images/logo-footer.png" alt="">
+            <img class="logo-footer" src="./assets/images/logo-footer.png" alt="">
           </div>
           <div class="col-12 col-md-6 col-lg-4 pt-5">
             <h3 class="text-uppercase text-light pb-3">APA INDUSTRIES CO., LTD.</h3>
