--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 
 
-      <div class="row no-gutters">
+      <div class="row no-gutters blue-section">
         <div class="col-12 col-md-6">
           <div class="img-breaking-force"></div>
         </div>
