--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>APA INDUSTRIES</title>
+  <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="./assets/js/slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="./assets/styles/util.css" />
 
@@ -211,7 +213,7 @@
       <div class="product-item">
         <img class="img-fluid" src="./assets/images/product1.jpg" alt="">
         <div>
-          <h4 class="medium pt-3 text-uppercase">aulmnium collapsible tube</h4>
+          <h4 class="medium pt-3 text-uppercase">Aluminum Collapsible Tube</h4>
           <h5 class="font-weight-normal">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, animi neque magni deserunt at laborum ab
           </h5>
@@ -221,7 +223,7 @@
       <div class="product-item">
         <img class="img-fluid" src="./assets/images/product2.jpg" alt="">
         <div>
-          <h4 class="medium pt-3 text-uppercase">aulmnium collapsible tube</h4>
+          <h4 class="medium pt-3 text-uppercase">Ampoule</h4>
           <h5 class="font-weight-normal">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, animi neque magni deserunt at laborum ab
           </h5>
@@ -231,7 +233,7 @@
       <div class="product-item">
         <img class="img-fluid" src="./assets/images/product3.jpg" alt="">
         <div>
-          <h4 class="medium pt-3 text-uppercase">aulmnium collapsible tube</h4>
+          <h4 class="medium pt-3 text-uppercase">Plastic bottles</h4>
           <h5 class="font-weight-normal">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, animi neque magni deserunt at laborum ab
           </h5>
@@ -241,7 +243,7 @@
       <div class="product-item">
         <img class="img-fluid" src="./assets/images/product4.jpg" alt="">
         <div>
-          <h4 class="medium pt-3 text-uppercase">aulmnium collapsible tube</h4>
+          <h4 class="medium pt-3 text-uppercase">Plastic Cap and Closure</h4>
           <h5 class="font-weight-normal">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, animi neque magni deserunt at laborum ab
           </h5>
